fixes and backend integration

--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "@types/jquery": "^3.3.30",
     "@types/leaflet": "^1.2.14",
     "@types/lodash": "^4.14.136",
+    "aws-amplify": "^2.3.0",
     "core-js": "^2.4.1",
     "font-awesome": "^4.7.0",
     "jquery": "^3.4.1",
@@ -77,10 +78,11 @@
     "mapbox-gl": "^0.50.0",
     "material-design-icons": "^3.0.1",
     "material-icons": "^0.3.1",
-    "ngx-captcha": "^8.0.1",
+    "ngx-captcha": "^6.4.0",
     "rxjs": "^6.3.3",
     "sass": "^1.55.0",
     "sass-loader": "^7.1.0",
+    "uuid": "^9.0.0",
     "zone.js": "^0.8.19"
   },
   "devDependencies": {
